# mediroute-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements-databricks.txt  requirements-local.txt  requirements.txt  run_pipeline.py  submission_summary.json
.streamlit/: config.toml
app/: streamlit_app.py
data/contracts/: input_schema.md  output_schema.md
data/sample/: ghana_facility_sample.csv
databricks/: README.md
databricks/notebooks/: 00_setup_config.py  01_bronze_ingest_delta.py  02_silver_normalize.py  03_gold_agent_pipeline.py  04_mlflow_agent_trace.py  05_vector_search_prep.py  06_quality_checks.py  07_export_for_app.py
docs/: demo_script.md  demo_script_v2_winning.md  deployment_streamlit_cloud.md  final_build_notes.md  official_schema_documentation.txt  submission_checklist.md  submission_description.md  v2_databricks_build_plan.md  what_i_need_from_you.md  winning_upgrade_plan.md
notebooks/: 01_ingest_data.py  02_clean_transform.py  03_idp_extraction_agent.py  04_claim_verification_desert_scoring.py  05_mlflow_trace.py  06_export_for_streamlit.py
resources/: mediroute_job.yml
scripts/: make_submission_package.py
sql/: databricks_dashboard_pack.sql  medical_desert_dashboard.sql
src/mediroute/: __init__.py  extractor.py  geo.py  lexicons.py  pipeline.py  planner.py  schemas.py  scoring.py  text_utils.py  verifier.py
tests/: test_pipeline.py
